{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 733,
  "lineage": "a42452b2-42ca-7965-a239-6243f06e6680",
  "resources": [
    {
      "module": "module.main-modules.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible-ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0588935a949f9ff17",
            "arn": "arn:aws:ec2:us-east-1:175437784856:instance/i-043c6658534eadda7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-043c6658534eadda7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "master-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-081ffff0e7a709e1a",
            "private_dns": "ip-10-0-0-48.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.48",
            "public_ip": "35.172.178.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-050829b55818c338a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0618c20ad1c932d27",
            "tags": {
              "Environment": "app-dev",
              "Name": "dev_ansible_server",
              "User": "ec2-user"
            },
            "tags_all": {
              "Environment": "app-dev",
              "Name": "dev_ansible_server",
              "User": "ec2-user"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07eeb389238f20bd4",
              "sg-0bd443d8a9a0bfaf9"
            ]
          },
          "dependencies": [
            "module.main-modules.module.ec2.aws_instance.bootstrap-ec2-instance",
            "module.main-modules.module.ec2.aws_instance.jenkins-ec2-instance",
            "module.main-modules.module.ec2.aws_security_group.instances_sgs",
            "module.main-modules.module.ec2.data.aws_ami.latest-amazon-linux-image",
            "module.main-modules.module.ec2.data.aws_ami.latest_ubuntu",
            "module.main-modules.module.eks.aws_eks_cluster.eks",
            "module.main-modules.module.iam-module.aws_iam_role.master",
            "module.main-modules.module.iam-module.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryFullAccessMaster",
            "module.main-modules.module.iam-module.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.main-modules.module.iam-module.aws_iam_role_policy_attachment.AmazonEKSServicePolicy",
            "module.main-modules.module.iam-module.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController",
            "module.main-modules.module.keypairs-module.tls_private_key.ssh-pk",
            "module.main-modules.module.network-module.aws_subnet.az-subnets",
            "module.main-modules.module.network-module.aws_vpc.myapp-vpc",
            "module.main-modules.module.s3-module.aws_s3_bucket.helm-bucket",
            "module.main-modules.module.s3-module.aws_s3_object.object",
            "module.main-modules.module.s3-module.random_id.rnd"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bootstrap-ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0588935a949f9ff17",
            "arn": "arn:aws:ec2:us-east-1:175437784856:instance/i-05006e6f2c490f1c7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05006e6f2c490f1c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "master-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05170c194afa1d33b",
            "private_dns": "ip-10-0-0-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.185",
            "public_ip": "3.88.221.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e3066461780d38d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0618c20ad1c932d27",
            "tags": {
              "Environment": "app-dev",
              "Name": "dev_bootstrap_server",
              "User": "ec2-user"
            },
            "tags_all": {
              "Environment": "app-dev",
              "Name": "dev_bootstrap_server",
              "User": "ec2-user"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07eeb389238f20bd4"
            ]
          },
          "dependencies": [
            "module.main-modules.module.ec2.aws_security_group.instances_sgs",
            "module.main-modules.module.ec2.data.aws_ami.latest-amazon-linux-image",
            "module.main-modules.module.keypairs-module.tls_private_key.ssh-pk",
            "module.main-modules.module.network-module.aws_subnet.az-subnets",
            "module.main-modules.module.network-module.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5f04cdf7758e9f0",
            "arn": "arn:aws:ec2:us-east-1:175437784856:instance/i-01fc18e627608a049",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01fc18e627608a049",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "master-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006f1840fc1c9c73f",
            "private_dns": "ip-10-0-0-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.22",
            "public_ip": "100.26.143.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0572ed27709d79cfd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0618c20ad1c932d27",
            "tags": {
              "Environment": "app-dev",
              "Name": "dev_jenkins_server",
              "User": "ubuntu"
            },
            "tags_all": {
              "Environment": "app-dev",
              "Name": "dev_jenkins_server",
              "User": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07eeb389238f20bd4",
              "sg-0bd443d8a9a0bfaf9"
            ]
          },
          "dependencies": [
            "module.main-modules.module.ec2.aws_security_group.instances_sgs",
            "module.main-modules.module.ec2.data.aws_ami.latest_ubuntu",
            "module.main-modules.module.network-module.aws_subnet.az-subnets",
            "module.main-modules.module.network-module.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instances_sgs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175437784856:security-group/sg-07eeb389238f20bd4",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07eeb389238f20bd4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Instance SSH SG",
            "name_prefix": "",
            "owner_id": "175437784856",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-instances-sg"
            },
            "tags_all": {
              "Name": "dev-instances-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ad25e1bf2abbbd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-modules.module.network-module.aws_vpc.myapp-vpc"
          ]
        },
        {
          "index_key": "sg2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175437784856:security-group/sg-0bd443d8a9a0bfaf9",
            "description": "Allow HTTP(8080) inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd443d8a9a0bfaf9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Instance HTTP(8080) SG",
            "name_prefix": "",
            "owner_id": "175437784856",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-instances-sg"
            },
            "tags_all": {
              "Name": "dev-instances-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ad25e1bf2abbbd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-modules.module.network-module.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175437784856:security-group/sg-039d0ffe27916ebbe",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039d0ffe27916ebbe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eks-sg",
            "name_prefix": "",
            "owner_id": "175437784856",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ad25e1bf2abbbd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-modules.module.network-module.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.network-module",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "myapp-main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175437784856:route-table/rtb-020f0ca3e1fcc67a0",
            "default_route_table_id": "rtb-020f0ca3e1fcc67a0",
            "id": "rtb-020f0ca3e1fcc67a0",
            "owner_id": "175437784856",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05dbf39af2fe5b726",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-rtb"
            },
            "tags_all": {
              "Name": "prod-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ad25e1bf2abbbd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-modules.module.network-module.aws_internet_gateway.myapp-igw",
            "module.main-modules.module.network-module.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.network-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175437784856:internet-gateway/igw-05dbf39af2fe5b726",
            "id": "igw-05dbf39af2fe5b726",
            "owner_id": "175437784856",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-09ad25e1bf2abbbd4"
          },
          "dependencies": [
            "module.main-modules.module.network-module.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.network-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myapp-rtb-az-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054692b6a73c7ea33",
            "route_table_id": "rtb-020f0ca3e1fcc67a0",
            "subnet_id": "subnet-0618c20ad1c932d27"
          },
          "dependencies": [
            "module.main-modules.module.network-module.aws_subnet.az-subnets",
            "module.main-modules.module.network-module.aws_vpc.myapp-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029fdc0498b1458ed",
            "route_table_id": "rtb-020f0ca3e1fcc67a0",
            "subnet_id": "subnet-01c12f6a2966f9737"
          },
          "dependencies": [
            "module.main-modules.module.network-module.aws_subnet.az-subnets",
            "module.main-modules.module.network-module.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.network-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175437784856:subnet/subnet-0618c20ad1c932d27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0618c20ad1c932d27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "175437784856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-subnet-0",
              "kubernetes.io/cluster/demo-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "prod-subnet-0",
              "kubernetes.io/cluster/demo-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09ad25e1bf2abbbd4"
          },
          "dependencies": [
            "module.main-modules.module.network-module.aws_vpc.myapp-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175437784856:subnet/subnet-01c12f6a2966f9737",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c12f6a2966f9737",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "175437784856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-subnet-1",
              "kubernetes.io/cluster/demo-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "prod-subnet-1",
              "kubernetes.io/cluster/demo-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09ad25e1bf2abbbd4"
          },
          "dependencies": [
            "module.main-modules.module.network-module.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main-modules.module.network-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175437784856:vpc/vpc-09ad25e1bf2abbbd4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-077c7137fc835cd78",
            "default_route_table_id": "rtb-020f0ca3e1fcc67a0",
            "default_security_group_id": "sg-0eba8aff6ceaf5b06",
            "dhcp_options_id": "dopt-0ffe78e52047fa2ba",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ad25e1bf2abbbd4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020f0ca3e1fcc67a0",
            "owner_id": "175437784856",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}